syntax = "proto3";

option go_package = "/cmsg";

// 客户端与服务端交互协议

package cmsg;


// ================== 输入指令 ==================
message InputCommand {
  bool up = 1;            // W键
  bool left = 2;          // A键
  bool down = 3;          // S键
  bool right = 4;         // D键
}

// ================== 玩家指令集 ==================
message PlayerInput {
  uint64 playerId = 1;
  repeated InputCommand commands = 2; // 该玩家的所有指令
}

// 新玩家刚进入，同步一次状态
message PlayerEnter{
  uint64 playerId = 1;
  int32 x = 2;
  int32 y = 3;
  string color = 4;
}

// 某个玩家离开
message PlayerLeave{
  uint64 playerId = 1;
}